--- a/simple/cloud_init.cfg
+++ b/simple/cloud_init.cfg
@@ -3,10 +3,10 @@ hostname: ${hostname}
 fqdn: ${fqdn}
 manage_etc_hosts: true
 users:
-  - name: ubuntu
+  - name: arch
     sudo: ALL=(ALL) NOPASSWD:ALL
     groups: users, admin
-    home: /home/ubuntu
+    home: /home/arch
     shell: /bin/bash
     lock_passwd: false
     ssh-authorized-keys:
@@ -16,7 +16,7 @@ ssh_pwauth: false
 disable_root: false
 chpasswd:
   list: |
-     ubuntu:linux
+     arch:linux
   expire: False
 packages:
   - qemu-guest-agent
